CLASE-05/RECURSOS/YAML/02-ingress-http.yaml
# LAB 5.2 - Ingress con routing por path.
# Ajusta ingressClassName al valor real de 'kubectl get ingressclass'.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: c5-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1
                port: {number: 80}
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2
                port: {number: 80}
